<resources>
    <string name="app_name">Camera Benchmark</string>
    <string name="open_camera">Open Camera</string>
    <string name="gallery">Gallery</string>
    <string name="no_enough_permission">No enough permissions(CAMERA, RECORD_AUDIO, WRITE_EXTERNAL_STORAGE)</string>
    <string name="recording">Recording</string>
    <string name="record">Record</string>
    <string name="shot">Shot</string>
    <string name="cancel">Cancel</string>
    <string name="image_mode">Image Mode</string>
    <string name="video_mode">Video Mode</string>
    <string name="finish">Finish</string>
    <string name="flip">Flip</string>
    <string name="play_file">Play[%s]</string>
    <string name="done">Done</string>
    <string name="fill">Fill</string>
    <string name="zoom">Zoom</string>
    <string name="video_size">Video size</string>
    <string name="image_size">Image size</string>
    <string name="ratio">Ratio</string>
    <string name="flash_auto">Auto</string>
    <string name="flash_on">On</string>
    <string name="flash_off">Off</string>
    <string name="face_straight">Please keep straight\n face as shown</string>
    <string name="face_left">Please move face to\n your left as shown</string>
    <string name="face_right">Please move face to\n your right as shown</string>
    <string name="face_up">Please move face\n up as shown</string>
    <string name="face_down">Please move face\n down as shown</string>
    <string name="click_hint">Please press the click button</string>

    <string name="head_text">Please select the Lightening condition</string>

</resources>