<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3fffffff"
    android:visibility="visible">

    <top.defaults.camera.CameraView
        android:id="@+id/preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:aspectRatio="4:3"
        app:autoFocus="true"
        app:facing="back"
        app:fillSpace="false"
        app:flash="auto"
        app:mode="image"
        app:pinchToZoom="false"
        app:showFocusIndicator="true" />

    <ImageButton
        android:id="@+id/flash_torch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="?android:selectableItemBackground"
        android:padding="16dp"
        android:src="@drawable/light_off"
        android:visibility="gone" />

    <TextView
        android:id="@+id/zoomValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_margin="16dp"
        android:textColor="#ffffff"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/actions_layout"
        android:layout_margin="16dp"
        android:gravity="center_horizontal"
        android:text="@string/recording"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="14sp"
        android:visibility="invisible"
        tools:visibility="visible" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@+id/actions_layout"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#3fffffff"
        android:orientation="vertical"
        android:padding="4dp"
        android:visibility="gone">

        <top.defaults.view.TextButton
            android:id="@+id/chooseRatio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/ratio"
            android:textColor="@android:color/white"
            app:textEffect="animateSize"
            app:underline="true" />

        <top.defaults.view.TextButton
            android:id="@+id/chooseSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/image_size"
            android:textColor="@android:color/white"
            app:textEffect="animateSize"
            app:underline="true" />

        <CheckBox
            android:id="@+id/fillSpace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#ffffff"
            android:text="@string/fill"
            android:textColor="#ffffff" />

        <CheckBox
            android:id="@+id/enableZoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#ffffff"
            android:text="@string/zoom"
            android:textColor="#ffffff" />

        <top.defaults.view.TextButton
            android:id="@+id/flash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_flash_auto"
            android:padding="4dp"
            android:text="@string/flash_auto"
            android:textColor="@android:color/white"
            app:textEffect="animateColor"
            app:underline="true" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/actions_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <top.defaults.view.TextButton
            android:id="@+id/switch_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="16dp"
            android:text="@string/video_mode"
            android:textColor="@android:color/white"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/action"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_centerHorizontal="true"
            android:visibility="visible" />


        <ImageButton
            android:id="@+id/flip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="?android:selectableItemBackground"
            android:onClick="flip"
            android:padding="16dp"
            android:src="@drawable/ic_switch_camera"
            android:visibility="gone" />

    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/blurLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="#E6000000"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="16dp"
                    android:text="Back"
                    android:textColor="@color/white"
                    android:textSize="25dp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/tv_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="25dp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/tv_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:padding="16dp"
                    android:text="Save"
                    android:textColor="@color/white"
                    android:textSize="25dp"
                    android:visibility="visible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="12dp">

                    <LinearLayout
                        android:id="@+id/ll_preview"
                        android:layout_width="300dp"
                        android:layout_height="400dp"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center|center_horizontal"
                        android:background="#E6E3E3"
                        android:orientation="vertical"
                        android:visibility="gone">

                            <ImageView
                                android:id="@+id/iv_preview"
                                android:layout_width="295dp"
                                android:layout_height="0dp"
                                android:layout_weight="0.9"
                                android:rotation="270" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/background" />

                        <ImageView
                            android:id="@+id/iv_del"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.1"
                            android:src="@drawable/ic_del" />

                        <!--<androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">


                        </androidx.cardview.widget.CardView>-->


                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </LinearLayout>

        </LinearLayout>
    </FrameLayout>


    <FrameLayout
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true">

        <ImageView
            android:id="@+id/iv_hint_action"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:rotation="0"
            android:src="@drawable/ic_max"
            android:visibility="gone" />

        <!--        <ImageView-->
        <!--            android:id="@+id/iv_hint"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:visibility="visible"-->
        <!--            android:clickable="true"-->
        <!--            android:rotation="0" />-->

    </FrameLayout>


    <FrameLayout
        android:id="@+id/fl_list"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:visibility="gone">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lv1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:layout_marginTop="10dp"
            android:background="#3fffffff"
            android:clipToPadding="false"
            android:paddingStart="@dimen/padding_start"
            android:paddingEnd="@dimen/padding_end" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="@dimen/item_height"
                android:layout_marginLeft="5dp"
                android:background="@drawable/custom_border"
                android:orientation="vertical" />

        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundGravity="center"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/ll_tint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E6000000"
            android:orientation="vertical"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/iv_hint"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="left"
            android:visibility="visible" />

        <TextView
            android:id="@+id/action_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/iv_hint_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:visibility="gone" />
    </FrameLayout>

    <TextView
        android:id="@+id/tv_middle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="24dp">

    </TextView>

</RelativeLayout>
